<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NetworkMapper</string>
    <string name="hello_world">Welcome!</string>

    <string name="action_settings">Settings</string>
    <string name="action_download">Download</string>
    <string name="action_about">About</string>
    <string name="action_displayip">Display IP</string>

    <string name="action_refresh">Refresh</string>


    <string name="scanbtn">Scan!</string>
    <string name="action_clear">Clear Screen</string>
    <string name="action_share">Share</string>
    <string name="share_to">Share to</string>

    <string name="dlg_ask2download">Nmap binary not found. Download Nmap binary?</string>
    <string name="dlg_ask2download_yes">Yes</string>
    <string name="dlg_ask2download_no">No</string>

    <string name="info_gotroot">Root access gained.\n</string>
    <string name="info_noroot">No root access. Limited scans.\n</string>

    <string name="info_binary_ok">Binary is present and executable. You can scan!\n</string>
    <string name="info_binary_notok">Binary is not executable. Please download binary from menu.\n</string>

    <string name="info_executing">Executing: </string>



    <string name="aboutdlg_title">About...</string>
    <string name="aboutdlg_text">NetworkMapper\nCopyright © 2015. Vlatko Kosturjak\nhttps://github.com/kost/NetworkMapper/</string>

    <string name="nmapbin_version">nmapbin_version</string>
    <string name="toast_scan_started">Scan started</string>
    <string name="toast_scan_finished">Scan finished</string>
    <string name="dlg_progress_title_download">Download</string>
    <string name="dlg_progress_title_extraction">Extraction</string>
    <string name="toast_download_version_error">Version download error. Probably there is no internet access or server is not accessible. Please retry.</string>
    <string name="toast_download_version_ok">Version file downloaded</string>
    <string name="toast_dowload_binary_error">"Binary download error: "</string>
    <string name="toast_download_binary_nextarch">"Trying next architecture: "</string>
    <string name="toast_download_binary_ok">Binary file(s) downloaded</string>
    <string name="toast_binary_extraction_ok">Binary file(s) extracted</string>
    <string name="toast_data_download_error">"Data Download error: "</string>
    <string name="toast_data_download_ok">Data File downloaded</string>
    <string name="toast_data_extraction_ok">Data file(s) extracted</string>
    <string name="scanbutton_stop">Stop</string>
    <string name="toast_scan_canceled">Scan cancelled!</string>
    <string name="toast_scan_canceling">Canceling scan. Please wait!</string>
    <string name="dlg_progress_cancel">Canceling scan. It takes time.</string>
    <string name="dlg_ask2downloaddata">Do you want to download nmap data directory (scripts, services, etc)?</string>
    <string name="dlg_ask2delete_yes">Yes</string>
    <string name="dlg_ask2delete_no">No</string>
    <string name="dlg_ask2deletedata">Do you want to delete old data files (services, scripts, etc)?</string>
    <string name="output_using_binary_filename">"Using binary filename: "</string>
    <string name="output_no_more_architectures_to_try">No more architectures to try. Seems you have exotic one? Please, submit this error to author with following info</string>
    <string name="output_trying_following_arch">"Trying following architecture: "</string>
    <string name="output_error_download_ioexception">"Error downloading - got IOException, try: "</string>
    <string name="output_downloading_version_file">Downloading version file\n</string>
    <string name="output_error_setting_permission">Error setting permissions\n</string>
    <string name="output_trying_fallback_archs">Tried reported architectures. Now trying fallback architectures\n</string>
    <string name="output_download_datafn">"Downloading data archive: "</string>
    <string name="action_copy2clipboard">Copy to Clipboard</string>
    <string name="clipboard_title">Nmap scan</string>
    <string name="toast_copy2cliboard">Output copied to clipboard</string>

    <string-array name="scan_array">
        <item>Regular</item>
        <item>Intense</item>
        <item>Quick</item>
        <item>Ping</item>
        <item>Quick+</item>
        <item>Quick+Trace</item>
        <item>Intense+UDP</item>
        <item>Intense/All</item>
        <item>Intense-Ping</item>
        <item>Slow</item>
    </string-array>
    <string-array name="scan_values_array">
        <item></item>
        <item>-T4 -A -v</item>
        <item>-T4 -F</item>
        <item>-sn</item>
        <item>-sV -T4 -O -F --version-light</item>
        <item>-sn --traceroute</item>
        <item>-sS -sU -T4 -A -v</item>
        <item>-p 1-65535 -T4 -A -v</item>
        <item>-T4 -A -v -Pn</item>
        <item>-sS -sU -T4 -A -v -PE -PS80,443 -PA3389 -PP -PU40125 -PY --source-port 53 \"--script=default or (discovery and safe)\"</item>
    </string-array>

</resources>
