<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_clear" android:title="@string/action_clear"
        android:orderInCategory="101" app:showAsAction="never" />
    <item android:id="@+id/action_download" android:title="@string/action_download"
        android:orderInCategory="102" app:showAsAction="never" />
    <item android:id="@+id/action_share" android:title="@string/action_share"
        android:orderInCategory="103" app:showAsAction="never" />
    <item android:id="@+id/action_displayip" android:title="@string/action_displayip"
        android:orderInCategory="104" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="105" app:showAsAction="never" />

</menu>
